--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.5",
-    "@astrojs/preact": "^3.5.3",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/mdx": "4.0.8",
+    "@astrojs/preact": "4.0.4",
+    "@astrojs/rss": "4.0.11",
+    "@astrojs/sitemap": "3.2.1",
+    "@astrojs/tailwind": "6.0.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "astro": "^4.15.4",
+    "astro": "5.3.0",
     "preact": "^10.22.0",
     "tailwindcss": "^3.4.4"
   }
